# analyse_dls_with_contin

./: .gitignore  .gitmodules  Analyse DLS with CONTIN.ipynb  CHANGELOG.md  README.md  __init__.py  contin.py  dlshelpers.py  genindex.html  index.html  objects.inv  pyproject.toml  readme.md  requirements.txt  requirements.yml  search.html  searchindex.js  tox.ini
.github/workflows/: doc.yml  main.yml  tests.yml
_sources/: index.rst.txt
doc/source/: conf.py
testdata/: readme.md
testdata/cgs3/: 080622_3_0027_0001.ASC  080622_3_0027_0002.ASC  080622_3_0027_0003.ASC  080622_3_0027_averaged.ASC  080622_3_0028_0001.ASC  080622_3_0028_0002.ASC  080622_3_0028_0003.ASC  080622_3_0028_averaged.ASC  080622_3_0029_0001.ASC  080622_3_0029_0002.ASC  080622_3_0029_0003.ASC  080622_3_0029_averaged.ASC  080622_3_0030_0001.ASC  080622_3_0030_0002.ASC  080622_3_0030_0003.ASC  080622_3_0030_averaged.ASC  080622_3_0031_0001.ASC  080622_3_0031_0002.ASC  080622_3_0031_0003.ASC  080622_3_0031_averaged.ASC  080622_3_0032_0001.ASC  080622_3_0032_0002.ASC  080622_3_0032_0003.ASC  080622_3_0032_averaged.ASC  080622_3_0033_0001.ASC  080622_3_0033_0002.ASC  080622_3_0033_0003.ASC  080622_3_0033_averaged.ASC  080622_3_0034_0001.ASC  080622_3_0034_0002.ASC  080622_3_0034_0003.ASC  080622_3_0034_averaged.ASC  080622_3_0035_0001.ASC  080622_3_0035_0002.ASC  080622_3_0035_0003.ASC  080622_3_0035_averaged.ASC  080622_3_0036_0001.ASC  080622_3_0036_0002.ASC  080622_3_0036_0003.ASC  080622_3_0036_averaged.ASC  (+12 more)
testdata/mw002-03/: 7 2021 MW002-030000_0001.ASC  7 2021 MW002-030000_0002.ASC  7 2021 MW002-030000_0003.ASC  7 2021 MW002-030000_averaged.ASC  7 2021 MW002-030001_0001.ASC  7 2021 MW002-030001_0002.ASC  7 2021 MW002-030001_0003.ASC  7 2021 MW002-030001_averaged.ASC
tests/: test_dlshelpers.py
(+16 files in other folders)
